<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secure Password Manager</string>
    <string name="hello_world"></string>

    <!-- Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Common -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="go_back">Back</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="exception_exit">Something went wrong…</string>
    <string name="naming_rule">Name shall only contain letters, numbers, spaces and []().-_</string>

    <!-- Common-Schemes -->
    <string name="scheme_name_default">a scheme</string>
    <string name="scheme_desc_default">this scheme is for ..</string>
    <string name="field_name_default">a field</string>
    <string name="field_desc_default">this field is ..</string>
    <string name="scheme_name_desc">The name of this scheme</string>
    <string name="scheme_description_desc">The description of this scheme</string>
    <string name="scheme_crypto_desc">The method to perform hashing</string>
    <string name="scheme_transform_desc">The transform of result after hashing</string>
    <string name="scheme_timetohash_desc">How many times to do hashing</string>
    <string name="scheme_resultlen_desc">The length of result</string>

    <!-- Transform -->
    <string name="trans_no_transform">No transform</string>
    <string name="trans_to_mixed">Mix-cased</string>

    <!-- Init -->
    <string name="info_init">Loading…</string>

    <!-- Main Page -->
    <string name="title_activity_main">Welcome</string>
    <string name="subtitle_activity_main">Choose a function to begin</string>
    <string name="generate_password">Generate Password</string>
    <string name="manage_saved_information">Manage Saved Information</string>
    <string name="manage_schemes">Manage Schemes</string>

    <!-- Setting page -->
    <string name="title_activity_setting">Settings</string>
    <string name="hide_result_by_default">Hide result by default</string>
    <string name="result_size_default">Result text size:</string>
    <string name="result_length_default">Result length (1–32):</string>
    <string name="hash_time_default">Times to hash (1–100):</string>
    <string name="ask_save_settings">Save settings?</string>
    <string name="hash_time_invalid">Time to hash is not valid.</string>
    <string name="result_length_invalid">Result length is not valid.</string>
    <string name="save_setting_succeed">Settings saved.</string>
    <string name="save_setting_fail">Error occurred, settings not saved.</string>

    <!-- Scheme List Page -->
    <string name="title_activity_scheme_list">Choose a scheme</string>
    <string name="subtitle_activity_scheme_list">Tap and hold for more options</string>
    <string name="edit_Scheme">Edit Scheme</string>
    <string name="description">Description</string>
    <string name="new_scheme">New Scheme</string>
    <string name="edit_this_scheme">Edit this scheme</string>
    <string name="delete_this_scheme">Delete this scheme</string>
    <string name="delete_scheme_dialog">Delete \"%1\"?</string>

    <!-- Info Input Page -->
    <string name="title_activity_information_input">Fill information</string>
    <string name="subtitle_activity_information_input">Tap on each field to fill</string>
    <string name="save_info">Save</string>
    <string name="load_saved_info">Load</string>
    <string name="proceed">Proceed</string>
    <string name="field_hint">Fill value</string>
    <string name="ask_overwrite">Overwrite?</string>
    <string name="same_info_exists">Saved information of the same name already exists.</string>
    <string name="info_load_title">Choose an saved entry</string>
    <string name="info_save_name">Name of information</string>
    <string name="info_save_hint">MyAccount</string>
    <string name="info_save_success">Information saved.</string>
    <string name="info_save_failed">Error occurred.</string>
    <string name="info_load_success">Information loaded.</string>
    <string name="info_load_failed">Error occurred.</string>
    <string name="how_many_times_to_hash">How many times to hash (1–100):</string>
    <string name="length_of_result">The length of result (1–32):</string>
    <string name="hashing_status_text">Hashed %1 times</string>
    <string name="prompt_secret">Secret:</string>

    <!-- Result Page -->
    <string name="title_activity_hashing_result">Hashing Result</string>
    <string name="subtitle_activity_hashing_result">Don\'t let others see!</string>
    <string name="hashing_result_change_fontsize">Change text size</string>
    <string name="copy_hashing_result">Copy Result</string>
    <string name="result_copied">Succefully copied result</string>
    <string name="hide_result">Hide result</string>
    <string name="result_hidden">HIDDEN</string>

    <!-- Scheme Edit Page -->
    <string name="title_activity_scheme_edit">Edit Scheme</string>
    <string name="subtitle_activity_scheme_edit">Tap the items to make changes</string>
    <string name="add_field">Add field</string>
    <string name="edit_field">Edit field</string>
    <string name="field_name">Field Name</string>
    <string name="field_description">Field Description</string>
    <string name="ask_save">Save changes?</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="scheme_description">Scheme Description</string>
    <string name="scheme_transform">Transform</string>
    <string name="scheme_timetohash">Time to hash (1–100)</string>
    <string name="scheme_resultlength">Length of result (1–32)</string>
    <string name="md5_is_the_only_one">Sorry, this is the only option for now.</string>
    <string name="scheme_name_exists">Scheme of the same name already exists.</string>
    <string name="delete_field_dialog">Delete \"%1\"?</string>

    <!-- Saved Info Page -->
    <string name="title_activity_list_saved_info">Saved Information</string>
    <string name="subtitle_activity_list_saved_info">Scheme:%1\nTap to view, hold to delete</string>
    <string name="failed_loading_infolist">Error occurred while loading all saved information</string>
    <string name="failed_loading_that_info">Error occurred while reading</string>
    <string name="info_deleted">Information deleted</string>
    <string name="info_delete_failed">Failed deleting the information</string>
    <string name="delete_info_dialog">Delete \"%1\"?</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
