<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="hk.ust.ustac.team8.securepasswordmanager.InformationInputActivity">

    <TextView
        style="@style/PageTitle"
        android:text="@string/title_activity_information_input"
        />

    <TextView
        style="@style/PageSubTitle"
        android:text="@string/subtitle_activity_information_input"
        />

    <RelativeLayout
        android:id="@+id/infoFillLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/infoFillBottomLinear"
            >

            <Button
                style="@style/ButtonTheme.Filled"
                android:text="@string/go_back"
                android:id="@+id/infoFillBackBtn"
                />

            <Button
                style="@style/ButtonTheme.Filled"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/load_saved_info"
                android:id="@+id/infoFillLoadBtn"
                />

            <Button
                style="@style/ButtonTheme.Filled"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/proceed"
                android:id="@+id/infoFillProceedBtn"
                />

        </LinearLayout>

        <ListView
            android:id="@+id/infoFillList"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/infoFillBottomLinear"
            />
    </RelativeLayout>

</LinearLayout>
