<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="hk.ust.ustac.team8.securepasswordmanager.HashingResultActivity">

    <TextView
        android:text="@string/title_activity_hashing_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:textSize="28sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hashing_result_change_fontsize"
        android:paddingLeft="15dp"
        />

    <SeekBar
        android:id="@+id/hashingResultSizeSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:max="50"
        android:progress="22"
        />

    <TextView
        android:id="@+id/hashingResultTextView"
        android:text="D41D 8CD9\n8F00 B204"
        style="@style/HashingResultTheme"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        >
        <Button
            style="@style/ButtonTheme"
            android:text="@string/go_back"/>
        <Button
            style="@style/ButtonTheme"
            android:text="@string/done"/>
    </LinearLayout>

</LinearLayout>
