<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="hk.ust.ustac.team8.securepasswordmanager.SchemeListActivity"
    android:weightSum="1">

    <TextView
        style="@style/PageTitle"
        android:text="@string/title_activity_scheme_list"
        />

    <TextView
        style="@style/PageSubTitle"
        android:text="@string/subtitle_activity_scheme_list"
        />

    <RelativeLayout
        android:id="@+id/schemeListLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/schemeListBottomLinear"
            >

            <Button
                style="@style/ButtonTheme.Filled"
                android:text="@string/go_back"
                android:id="@+id/schemeListBackBtn"
                />

            <Button
                style="@style/ButtonTheme.Filled"
                android:layout_weight="0.5"
                android:text="@string/new_scheme"
                android:id="@+id/schemeListNewSchemeBtn"
                />

            </LinearLayout>

        <ListView
            android:id="@+id/schemeList"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/schemeListBottomLinear"
            />

    </RelativeLayout>

</LinearLayout>
